# budgie-caffeine-applet

./: .gitignore  README.md  budgie-caffeine-applet.py.in  meson.build
.tx/: config
data/: CaffeineApplet.plugin  com.github.yursan9.budgie-caffeine-applet.appdata.xml  com.github.yursan9.budgie-caffeine-applet.appstream.xml  com.github.yursan9.budgie-caffeine-applet.gschema.xml  meson.build  meson_post_install
po/: LINGUAS  POTFILES  budgie-caffeine-applet.pot  ca.po  de_DE.po  en_US.po  fr_FR.po  id.po  it_IT.po  ko.po  lt.po  meson.build  ru_RU.po  sv.po  tr_TR.po  update_linguas.sh  zh_CN.po
